# rust-for-java-developers

./: .gitignore  LICENSE  README.md  docker-compose.yml  goals.md  plan.md
collection-bruno/: Create Ticket.yml  Find ticket.yml  List tickets.yml  Stats.yml  Status.yml  opencollection.yml
collection-bruno/environments/: rust.yml  springboot-local.yml  springboot-mvc-native.yml  springboot-webflux-native.yml  springboot-webflux.yml  springboot.yml
database/: init_database.sh  seed.sql
grafana/dashboards/: Rust For Java Developers Benchmark.json
k6/: load_testing.js  make-charts.mjs  run-bench.sh
k6/summaries/: summary-100-rust.json  summary-100-springboot-mvc-native.json  summary-300-rust.json  (+12 more)
prometheus/: clean_data.sh  prometheus.yml
rust/: .dockerignore  Cargo.toml  Dockerfile  config.yml  instructions.md
rust/src/: app_state.rs  config.rs  main.rs  routes.rs  schema.rs
rust/src/extractors/: app_query.rs  mod.rs  validated_json.rs  validated_query.rs
rust/src/models/: mod.rs  priority.rs  stat.rs  ticket.rs  ticket_status.rs
rust/src/repository/: diesel_ticket_repository.rs  mod.rs  ticket_repository.rs
rust/src/routes/: ticket_routes.rs
rust/src/schemas/: app_error.rs  app_response.rs  create_ticket_request.rs  mod.rs  request_params.rs  stats_response.rs  ticket_response.rs  update_status_request.rs
rust/src/services/: mod.rs  ticket_service.rs
slides/: pnpm-lock.yaml
springboot/: pom.xml
springboot-mvc/: Dockerfile  Dockerfile-native  pom.xml
springboot-webflux/: Dockerfile  Dockerfile-native  pom.xml
telegraf/: telegraf.conf
(+46 files in other folders)
