[package]
name = "tickets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
config = "0.15.23"
deadpool = { version = "0.13", features = ["rt_tokio_1"] }
diesel = { version = "2.3.10", features = ["postgres_backend", "time"] }
diesel-async = { version = "0.9.1", features = ["tokio-postgres", "deadpool", "postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.3"
mockall = "0.14.0"
serde_json = "1.0.150"
